[package]
name = "egui_utility"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = "0.3.9"
windows-win = "2.4.1"
windows = "0.28.0"
dirs = "3.0"